# nats-pubsub-app

./: .gitignore  README.md  nats-pubsub-app.sln
csharp/: .env.example  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml
csharp/Examples/: README.md
csharp/MessageLogger/: Dockerfile  Program.cs
csharp/MessageLogger-JetStream/: Dockerfile  Program.cs
csharp/NatsHttpGateway/: CONSUMER_README.md  Dockerfile  GATEWAY_CONSUMER_API.md  NATS_CONSUMER_BACKGROUND.md  NatsHttpGateway.csproj  NatsHttpGateway.sln  README.md  (+9 more)
csharp/NatsHttpGateway.ComponentTests/: HealthEndpointComponentTests.cs  MessagesEndpointComponentTests.cs  NatsComponentTestBase.cs  NatsHttpGateway.ComponentTests.csproj  README.md  SecurityComponentTests.cs  appsettings.json  appsettings.json.example  docker-compose.test.yml
csharp/NatsHttpGateway.Tests/: NatsHttpGateway.Tests.csproj
csharp/NatsHttpGateway/Examples/: .gitignore  CMakeLists.txt  Makefile  ProtobufClientExample.cs  README-CONFIG.md  README-CPP.md  README-CSHARP.md  README-PYTHON.md  README.md  WebSocketClientExample.cs  http_client_example.cpp  message_pb2.py  protobuf_client_example.py  requirements.txt  websocket_client_example.cpp  websocket_client_example.py
docs/: architecture.md  component-overview.md  jetstream-historical-replay.md  message-format.md  message-logging-guide.md  nats-subjects-guide.md  payment-monitoring-setup.md  single-vm-deployment.md  upgrade-to-nats-net-2.md
nats-config/: nats-server-standalone.conf  nats-server.conf
python/: .env.example  README.md  docker-compose.yml
(+57 files in other folders)
